// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 1`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="1723161600000"
      >
        4-08-09
      </option>
      <option
        data-testid="date-option"
        value="1723075200000"
      >
        4-08-08
      </option>
      <option
        data-testid="date-option"
        value="1722988800000"
      >
        4-08-07
      </option>
      <option
        data-testid="date-option"
        value="1722902400000"
      >
        4-08-06
      </option>
      <option
        data-testid="date-option"
        value="1722816000000"
      >
        4-08-05
      </option>
      <option
        data-testid="date-option"
        value="1722729600000"
      >
        4-08-04
      </option>
      <option
        data-testid="date-option"
        value="1722643200000"
      >
        4-08-03
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days 2`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="1712707200000"
      >
        4-04-10
      </option>
      <option
        data-testid="date-option"
        value="1712620800000"
      >
        4-04-09
      </option>
      <option
        data-testid="date-option"
        value="1712534400000"
      >
        4-04-08
      </option>
      <option
        data-testid="date-option"
        value="1712448000000"
      >
        4-04-07
      </option>
      <option
        data-testid="date-option"
        value="1712361600000"
      >
        4-04-06
      </option>
      <option
        data-testid="date-option"
        value="1712275200000"
      >
        4-04-05
      </option>
      <option
        data-testid="date-option"
        value="1712188800000"
      >
        4-04-04
      </option>
    </select>
  </div>
</DocumentFragment>
`;

exports[`PastWorkOrdersDatePicker Component should be populated with the previous 5 working days spanning a different year 1`] = `
<DocumentFragment>
  <div
    class="date-picker-container"
  >
    <label
      class="lbh-heading-h2"
      for="date-picker"
    >
      Select date
    </label>
    <select
      id="date-picker"
      name="date-picker"
    >
      <option
        data-testid="date-option"
        value="1703980800000"
      >
        3-12-31
      </option>
      <option
        data-testid="date-option"
        value="1703894400000"
      >
        3-12-30
      </option>
      <option
        data-testid="date-option"
        value="1703808000000"
      >
        3-12-29
      </option>
      <option
        data-testid="date-option"
        value="1703721600000"
      >
        3-12-28
      </option>
      <option
        data-testid="date-option"
        value="1703635200000"
      >
        3-12-27
      </option>
      <option
        data-testid="date-option"
        value="1703548800000"
      >
        3-12-26
      </option>
      <option
        data-testid="date-option"
        value="1703462400000"
      >
        3-12-25
      </option>
    </select>
  </div>
</DocumentFragment>
`;
